Header fixes on narrow screens. Resolves #2128.

--- a/spa/src/app/shared/toolbar-nav-drop-down/toolbar-nav-drop-down.component.scss
+++ b/spa/src/app/shared/toolbar-nav-drop-down/toolbar-nav-drop-down.component.scss
@@ -24,10 +24,9 @@
 }
 
 /**
- * Large Tablet +
- * https://material.io/design/layout/responsive-layout-grid.html#breakpoints
+ * HCA specific breakpoint
  */
-@media screen and (min-width: 840px) {
+@media screen and (min-width: 1200px) {
 
     /* Nav drop down - show */
     :host {
