--- a/spa/src/app/site/hca/hca-toolbar/hca-toolbar.component.scss
+++ b/spa/src/app/site/hca/hca-toolbar/hca-toolbar.component.scss
@@ -38,12 +38,12 @@ mat-toolbar {
     img {
         height: 30px;
     }
-    
+
     toolbar-nav {
         padding: 12px 0;
         z-index: 101; /* Positioned above hamburger-overlay */
     }
-    
+
     /* Hamburger */
     hamburger .fontsize-s {
         margin-bottom: 0;
@@ -107,7 +107,7 @@ mat-toolbar {
             display: none;
         }
     }
-    
+
     /* Auth image hidden on mobile, use nav item instead */
     .auth {
         display: none;
@@ -115,10 +115,22 @@ mat-toolbar {
 }
 
 /**
- * Large Tablet +
+ * Medium +
  * https://material.io/design/layout/responsive-layout-grid.html#breakpoints
  */
-@media screen and (min-width: 840px) {
+@media screen and (min-width: 1024px) {
+
+    mat-toolbar {
+        img {
+            height: 40px;
+        }
+    }
+}
+
+/**
+ * HCA specific breakpoint
+ */
+@media screen and (min-width: 1200px) {
 
     @mixin toolbar-link() {
         color: $hca-gray-dark;
@@ -141,13 +153,17 @@ mat-toolbar {
 
     mat-toolbar {
 
+        mat-toolbar-row {
+            padding: 0 30px; /* Gutter 30px */
+        }
+
         toolbar-nav {
             padding: 0;
         }
 
         /* Link wrapper */
         toolbar-nav-item {
-            padding: 0 10px;
+            padding: 0 12px;
 
             .link {
                 @include toolbar-link();
@@ -173,21 +189,22 @@ mat-toolbar {
         .auth-link {
             cursor: pointer;
             @include toolbar-link();
+
             .fontsize-xs {
                 font-weight: 600; /* Missing from tablet link definition, specified only in mobile */
             }
         }
-        
+
         .auth-authenticated {
             align-items: center;
             display: flex;
         }
-        
+
         .auth-menu-button {
             background-color: unset;
             border: 0;
         }
-        
+
         .auth-image-placeholder {
             align-items: center;
             background-color: $hca-secondary;
@@ -199,7 +216,7 @@ mat-toolbar {
             justify-content: center;
             width: 40px;
         }
-        
+
         .auth-image-hover {
             border: 3px solid transparent;
             border-radius: 50%;
@@ -232,7 +249,7 @@ mat-toolbar {
         overflow: hidden;
         text-overflow: ellipsis;
     }
-    
+
     .catalog-update-chip {
         position: relative;
     }
@@ -251,36 +268,5 @@ mat-toolbar {
 
     .catalog-update-chip:hover::after {
         background-color: $hca-orange-hover;
-    }
-}
-
-/**
- * Medium +
- * https://material.io/design/layout/responsive-layout-grid.html#breakpoints
- */
-@media screen and (min-width: 1024px) {
-
-    mat-toolbar {
-
-        img {
-            height: 40px;
-        }
-
-        toolbar-nav-item {
-            padding: 0 12px;
-        }
-    }
-}
-
-/**
- * Large
- */
-@media (min-width: 1200px) {
-
-    mat-toolbar {
-
-        mat-toolbar-row {
-            padding: 0 30px; /* Gutter 30px */
-        }
     }
 }
